Add an example of PEvent generation (#145)
This SHA is an example of how to generate PEvents (Performance Events)
typically used for correlation
efforts between a perf model and hardware.

PEvents are a more "compact" form of the pipeout collection pairs,
allowing a modeler to specify more direct items
for collection. Pipeout pairs can be more elaborate/detailed. However,
with some clever coding, there can be
reuse -- it's not done here.

To generate performance events, use the command line parameter
`--pevents <filename> <pevent1,pevent2,...|all>`.

Examples:
```
# All pevents
./olympia traces/dhry_riscv.zstf --pevents retire.out all -i100

# Just RETIRE pevent
./olympia traces/dhry_riscv.zstf --pevents retire.out RETIRE -i100

# RETIRE and COMPLETE pevent
./olympia traces/dhry_riscv.zstf --pevents retire.out COMPLETE,RETIRE -i100
```

While I was at it, I removed the generated annotation for pipeline
collection for LoadStore/MemoryAccess classes -- uses NVP which
generates faster, as well as creates smaller pipeouts.

---------

Signed-off-by: Knute <56927209+klingaard@users.noreply.github.com>

--- a/test/sim/CMakeLists.txt
+++ b/test/sim/CMakeLists.txt
@@ -48,11 +48,22 @@ sparta_named_test(olympia_coremark_test_report_html olympia -i 1M
   --report reports/core_report.def
   --workload traces/core_riscv.zstf)
 
+# Test missing opcodes
 sparta_named_test(olympia_json_test_missing_opcodes olympia
   --workload json_tests/missing_opcodes.json)
 
+# Test FP transfers
 sparta_named_test(olympia_json_test_fp_transfers olympia
   --workload json_tests/fp_transfers.json)
+
+# Test PEvent generation
+sparta_named_test(olympia_json_test_pevents olympia
+  --workload traces/dhry_riscv.zstf
+  --pevents test_pevent.out RETIRE
+  --pevents test_pevent.out COMPLETE)
+sparta_named_test(olympia_json_test_pevents_all olympia
+  --workload traces/dhry_riscv.zstf
+  --pevents test_pevent.out all)
 
 ## Test the arches
 file(GLOB TEST_YAML "${SIM_BASE}/arches/*.yaml")
