--- a/arches/big_core.yaml
+++ b/arches/big_core.yaml
@@ -35,18 +35,19 @@ top.cpu.core0.extension.core_extensions:
     ["br"] # exe9
   ]
   # this is used to set how many units per queue
-  # ["0", "1"] means iq0 has exe0 and exe1, so it's inclusive
+  # ["0", "3"] means iq0 has exe0, exe1, exe2, and exe3, so it's inclusive
   # if you want just one execution unit to issue queue you can do:
   # ["0"] which would result in iq0 -> exe0
   # *note if you change the number of issue queues, 
   # you need to add it to latency matrix below
+
   issue_queue_to_pipe_map:
   [ 
     ["0", "1"], # iq0 -> exe0, exe1
     ["2", "3"], # iq1 -> exe2, exe3
-    ["4", "5"], # iq2
-    ["6", "7"], # iq3
-    ["8", "9"]  # iq4
+    ["4", "5"], # iq2 -> exe4, exe5
+    ["6", "7"], # iq3 -> exe6, exe7
+    ["8", "9"]  # iq4 -> exe8, exe9
   ]
   # optional if you want to set an alias for each exe* unit
   exe_pipe_alias:
@@ -61,6 +62,16 @@ top.cpu.core0.extension.core_extensions:
     ["exe7", "fpu1"],
     ["exe8", "br0"],
     ["exe9", "br1"],
+  ]
+
+  # optional if you want to set an alias for each iq* unit
+  issue_queue_alias:
+  [
+    ["iq0", "iq0_alu"],
+    ["iq1", "iq1_alu"],
+    ["iq2", "iq2_alu"],
+    ["iq3", "iq3_fpu"],
+    ["iq4", "iq4_br"],
   ]
 top.cpu.core0.rename.scoreboards:
   # From
