Issue Queue Implementation (#140)
This PR adds issue queue modeling to Olympia, by allowing users to
define the number of issue queues, which execution units map to which
issue queues, and which target pipes are supported for each execution
unit.

Regressions will fail until we merge [scoreboard
fix](https://github.com/sparcians/map/pull/468) in Sparta.
Old flow:
dispatch -> executepipe->execute

New flow:
dispatch -> issue queue -> executepipe -> execute

---------

Signed-off-by: Aaron Chan <achn357@gmail.com>

--- a/arches/big_core.yaml
+++ b/arches/big_core.yaml
@@ -1,5 +1,5 @@
 #
-# Set up the pipeline for a 8-wide machine
+# Set up the pipeline for a 8_wide machine
 #
 
 # Build on top of a medium core
@@ -17,42 +17,55 @@ top.cpu.core0:
     l1_size_kb: 64
 
 top.cpu.core0.extension.core_extensions:
-  execution_topology:
-  [["alu", "6"],
-   ["fpu", "2"],
-   ["br",  "2"]]
+  # this sets the pipe targets for each execution unit
+  # you can set a multiple or just one:
+  # ["int", "div"] would mean this execution pipe can accept
+  # targets of: "int" and "div"
+  pipelines:
+  [
+    ["int"], # exe0
+    ["int", "div"], # exe1
+    ["int", "mul"], # exe2
+    ["int", "mul", "i2f", "cmov"], # exe3
+    ["int"], # exe4
+    ["int"], # exe5
+    ["float", "faddsub", "fmac"], # exe6
+    ["float", "f2i"], # exe7
+    ["br"], # exe8
+    ["br"] # exe9
+  ]
+  # this is used to set how many units per queue
+  # ["0", "3"] means iq0 has exe0, exe1, exe2, and exe3, so it's inclusive
+  # if you want just one execution unit to issue queue you can do:
+  # ["0"] which would result in iq0 -> exe0
+  # *note if you change the number of issue queues, 
+  # you need to add it to latency matrix below
 
+  issue_queue_to_pipe_map:
+  [ 
+    ["0", "1"], # iq0 -> exe0, exe1
+    ["2", "3"], # iq1 -> exe2, exe3
+    ["4", "5"], # iq2 -> exe4, exe5
+    ["6", "7"], # iq3 -> exe6, exe7
+    ["8", "9"]  # iq4 -> exe8, exe9
+  ]
 top.cpu.core0.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-    [["",      "alu0", "alu1", "alu2", "alu3", "alu4", "alu5", "fpu0", "fpu1", "br0",  "br1",  "lsu"],
-    ["alu0",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["alu1",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["alu2",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["alu3",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["alu4",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["alu5",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["fpu0",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["fpu1",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["br0",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["br1",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["lsu",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"]]
-
-
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
+      ["lsu",    1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-    [["",      "alu0", "alu1", "alu2", "alu3", "alu4", "alu5", "fpu0", "fpu1", "br0",  "br1",  "lsu"],
-    ["alu0",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["alu1",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["alu2",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["alu3",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["alu4",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["alu5",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["fpu0",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["fpu1",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["br0",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["br1",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"],
-    ["lsu",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1"]]
-
-
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
+      ["lsu",    1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1]]
