--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,3 +31,4 @@ add_subdirectory(core/dispatch)
 add_subdirectory(core/l2cache)
 add_subdirectory(core/rename)
 add_subdirectory(core/lsu)
+add_subdirectory(core/issue_queue)
