--- a/arches/medium_core.yaml
+++ b/arches/medium_core.yaml
@@ -15,33 +15,49 @@ top.cpu.core0:
     l1_size_kb: 32
 
 top.cpu.core0.extension.core_extensions:
-  execution_topology:
-  [["alu", "3"],
-   ["fpu", "2"],
-   ["br",  "1"]]
+  # this sets the pipe targets for each execution unit
+  # you can set a multiple or just one:
+  # ["int", "div"] would mean this execution pipe can accept
+  # targets of: "int" and "div"
+  pipelines:
+  [
+      ["int", "mul", "i2f", "cmov"], # exe0
+      ["int", "div"], # exe1
+      ["int"], # exe2
+      ["float", "faddsub", "fmac"], # exe3
+      ["float", "f2i"], # exe4
+      ["br"] # exe5
+  ]
+  
+  # this is used to set how many units per queue
+  # ["0", "3"] means iq0 has exe0, exe1, exe2, and exe3, so it's inclusive
+  # if you want just one execution unit to issue queue you can do:
+  # ["0"] which would result in iq0 -> exe0
+  # *note if you change the number of issue queues, 
+  # you need to add it to latency matrix below
+  issue_queue_to_pipe_map:
+  [ 
+    ["0"], # iq0 -> exe0
+    ["1", "2"], # iq1 -> exe1, exe2
+    ["3", "4"], # iq2 -> exe3, exe4
+    ["5"] # iq3 -> exe5
+  ]
 
 top.cpu.core0.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-    [["",     "alu0", "alu1", "alu2", "fpu0", "fpu1", "br0", "lsu"], 
-    ["alu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["alu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["alu2",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["fpu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["fpu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["br0",     "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["lsu",     "1",    "1",    "1",    "1",    "1",   "1",  "1"]]
-
-
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3"],
+      ["lsu",    1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-    [["",     "alu0", "alu1", "alu2", "fpu0", "fpu1", "br0", "lsu"], 
-    ["alu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["alu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["alu2",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["fpu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["fpu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["br0",     "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["lsu",     "1",    "1",    "1",    "1",    "1",   "1",  "1"]]
-
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3"],
+      ["lsu",    1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1]]
