--- a/arches/small_core.yaml
+++ b/arches/small_core.yaml
@@ -12,25 +12,42 @@ top.cpu.core0:
     l1_size_kb: 16
 
 top.cpu.core0.extension.core_extensions:
-  execution_topology:
-    [["alu", "1"],
-     ["fpu", "1"],
-     ["br",  "1"]]
+  # this sets the pipe targets for each execution unit
+  # you can set a multiple or just one:
+  # ["int", "div"] would mean this execution pipe can accept
+  # targets of: "int" and "div"
+  pipelines:
+  [
+      ["int", "mul", "i2f", "cmov", "div"], # exe0
+      ["float", "faddsub", "fmac", "f2i"], # exe1
+      ["br"] # exe2
+  ]
+  # this is used to set how many units per queue
+  # ["0", "3"] means iq0 has exe0, exe1, exe2, and exe3, so it's inclusive
+  # if you want just one execution unit to issue queue you can do:
+  # ["0"] which would result in iq0 -> exe0
+  # *note if you change the number of issue queues, 
+  # you need to add it to latency matrix below
+  issue_queue_to_pipe_map:
+  [ 
+    ["0"], # iq0 -> exe0
+    ["1"], # iq1 -> exe1
+    ["2"]  # iq2 -> exe2
+  ]
 
 top.cpu.core0.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-    [["",     "alu0", "fpu0", "br0", "lsu"],   # <-- TO
-     ["alu0",    "1",    "1",   "1",   "1"],
-     ["fpu0",    "1",    "1",   "1",   "1"],
-     ["br0",     "1",    "1",   "1",   "1"],
-     ["lsu",     "1",    "1",   "1",   "1"]]
-
+      [["",      "lsu", "iq0", "iq1", "iq2"],
+      ["lsu",    1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1]]
   float.params.latency_matrix: |
-    [["",     "alu0", "fpu0", "br0", "lsu"],   # <-- TO
-     ["alu0",    "1",    "1",   "1",   "1"],
-     ["fpu0",    "1",    "1",   "1",   "1"],
-     ["br0",     "1",    "1",   "1",   "1"],
-     ["lsu",     "1",    "1",   "1",   "1"]]
+      [["",      "lsu", "iq0", "iq1", "iq2"],
+      ["lsu",    1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1]]
