--- a/test/core/dispatch/test_cores/test_small_core.yaml
+++ b/test/core/dispatch/test_cores/test_small_core.yaml
@@ -1,12 +1,34 @@
-
 #
 # Set up the pipeline for a 2-wide machine
 #
-#top.cpu:
-#  dispatch.num_to_dispatch: 2
 
 top.extension.core_extensions:
-  execution_topology:
-    [["alu", "1"],
-     ["fpu", "1"],
-     ["br",  "1"]]
+  pipelines:
+    [
+      ["int", "mul", "i2f", "cmov", "div"],
+      ["float", "faddsub", "fmac", "f2i"], 
+      ["br"]
+    ]
+  issue_queue_to_pipe_map:
+  [ 
+    ["0"],
+    ["1"],
+    ["2"]
+  ]
+
+top.rename.scoreboards:
+  # From
+  # |
+  # V
+  integer.params.latency_matrix: |
+      [["",      "lsu", "iq0", "iq1", "iq2"],
+      ["lsu",    1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1]]
+  float.params.latency_matrix: |
+      [["",      "lsu", "iq0", "iq1", "iq2"],
+      ["lsu",    1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1]]
