--- a/test/core/rename/test_cores/test_small_core_full.yaml
+++ b/test/core/rename/test_cores/test_small_core_full.yaml
@@ -11,26 +11,37 @@ top.cpu.core0:
   dcache.params:
     l1_size_kb: 16
 
+#
+# Set up the pipeline for a 2-wide machine
+#
+
 top.cpu.core0.extension.core_extensions:
-  execution_topology:
-    [["alu", "1"],
-     ["fpu", "1"],
-     ["br",  "1"]]
+  pipelines:
+    [
+      ["int", "mul", "i2f", "cmov", "div"],
+      ["float", "faddsub", "fmac", "f2i"], 
+      ["br"]
+    ]
+  issue_queue_to_pipe_map:
+  [ 
+    ["0"],
+    ["1"],
+    ["2"]
+  ]
 
 top.cpu.core0.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-    [["",     "alu0", "fpu0", "br0", "lsu"],   # <-- TO
-     ["alu0",    "1",    "1",   "1",   "1"],
-     ["fpu0",    "1",    "1",   "1",   "1"],
-     ["br0",     "1",    "1",   "1",   "1"],
-     ["lsu",     "1",    "1",   "1",   "1"]]
-
+      [["",      "lsu", "iq0", "iq1", "iq2"],
+      ["lsu",    1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1]]
   float.params.latency_matrix: |
-    [["",     "alu0", "fpu0", "br0", "lsu"],   # <-- TO
-     ["alu0",    "1",    "1",   "1",   "1"],
-     ["fpu0",    "1",    "1",   "1",   "1"],
-     ["br0",     "1",    "1",   "1",   "1"],
-     ["lsu",     "1",    "1",   "1",   "1"]]
+      [["",      "lsu", "iq0", "iq1", "iq2"],
+      ["lsu",    1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1]]
