Add L1 Instruction Cache

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,3 +32,4 @@ add_subdirectory(core/l2cache)
 add_subdirectory(core/rename)
 add_subdirectory(core/lsu)
 add_subdirectory(core/issue_queue)
+add_subdirectory(core/icache)
