--- a/test/core/rename/test_cores/test_small_core_full.yaml
+++ b/test/core/rename/test_cores/test_small_core_full.yaml
@@ -4,6 +4,8 @@
 
 top.cpu.core0:
   fetch.params.num_to_fetch:   2
+  icache.params.l1_always_hit: true
+  icache.params.cache_latency: 0
   decode.params.num_to_decode: 2
   rename.params.num_to_rename: 2
   dispatch.params.num_to_dispatch: 2
@@ -19,11 +21,11 @@ top.cpu.core0.extension.core_extensions:
   pipelines:
     [
       ["int", "mul", "i2f", "cmov", "div"],
-      ["float", "faddsub", "fmac", "f2i"], 
+      ["float", "faddsub", "fmac", "f2i"],
       ["br"]
     ]
   issue_queue_to_pipe_map:
-  [ 
+  [
     ["0"],
     ["1"],
     ["2"]
