1st commit of fusion capable decoder, json support
fusion decoder implementation. This is suitable for analysis.

Adds fusion parameters to fusion.yaml. And specifies external file
definition of fusion groups using JSON

New statistics for fused instructions and fusion group stats

HCache as separate structure in fusion/fusion

Includes the FSL.md domain language description

Inst.hpp modified to add FUSED and FUSION_GHOST status as
extended status

Support for non-sequential program ID. Each instr has a PID
increment value, and methods

Formatting, clean up of Inst.hpp

JSON support added to Fusion.hpp

New exceptions for JSON errors

Fusion default transform no longer modifies the input buffer

HCache testbench functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,14 +60,16 @@ set(CMAKE_CXX_FLAGS_FASTDEBUG "-O3 -g")
 set(CMAKE_CXX_FLAGS_DEBUG     "-O0 -g")
 
 # Include directories
-include_directories (core mss sim)
+include_directories (core mss sim mavis/mavis fusion/fusion)
 include_directories (SYSTEM mavis)
 include_directories (SYSTEM stf_lib)
+include_directories (fusion)
 
-# Mavis, the Core, MSS, and the simulator
+# Mavis, the Core, MSS, the simulator and Fusion
 add_subdirectory (mavis)
 add_subdirectory (core)
 add_subdirectory (mss)
+add_subdirectory (fusion)
 
 # Add STF library to the build
 add_subdirectory (${STF_LIB_BASE})
