--- a/fusion/test/CMakeLists.txt
+++ b/fusion/test/CMakeLists.txt
@@ -15,30 +15,32 @@ endif()
 
 add_library(mavis STATIC IMPORTED)
 
-set_target_properties(mavis PROPERTIES IMPORTED_LOCATION ${MAVIS_LIBRARY})
+set_target_properties(mavis PROPERTIES IMPORTED_LOCATION 
+             ${MAVIS_LIBRARY})
 
 add_executable(fusiontest
                TestBench.cpp
                TestData.cpp
                TestFieldExtractor.cpp
+               FslTests.cpp
                main.cpp
                Options.cpp )
 
-target_compile_options(fusiontest PRIVATE -Wall -Wextra
-               -Wno-unused-parameter  # mavis
-              )
+target_link_libraries(fusiontest PRIVATE FusionLib FusionDSL mavis)
+
 
 find_package(Boost REQUIRED COMPONENTS program_options)
 if(Boost_FOUND)
     target_include_directories(fusiontest PRIVATE ${Boost_INCLUDE_DIRS})
     target_link_libraries(fusiontest 
-                          PRIVATE FusionLib mavis
+                          PRIVATE FusionLib FusionDSL mavis
                           PRIVATE ${Boost_LIBRARIES} pthread )
 else()
     message(SEND_ERROR "Boost is a required package for the testbench")
 endif()
 
 set(JSON_BASE "${FUSION_TOP}/test/json")
+set(FSL_BASE  "${FUSION_TOP}/test/fsl")
 
 set(TB_OPTS --tb_verbose)
 
@@ -47,9 +49,20 @@ set(ISA_FILES
       --isa_file  ${JSON_BASE}/isa_rv64g.json
       --isa_file  ${JSON_BASE}/isa_rv64c.json)
 
+set(FSL_FILES
+      --fsl_file "${FSL_BASE}/test1.fsl"
+      --fsl_file "${FSL_BASE}/test2.fsl")
+
+set(FSL_SYNTAX_FILES
+      --fsl_syntax_file "${FSL_BASE}/syntax1.fsl"
+      --fsl_syntax_file "${FSL_BASE}/syntax2.fsl")
+
 list(APPEND OPTS ${ISA_FILES} 
+                 ${FSL_FILES} 
+                 ${FSL_SYNTAX_FILES} 
                  ${TB_OPTS})
 
 add_custom_target(regress
     COMMAND fusiontest ${OPTS}
+    DEPENDS fusiontest copy_symtab_expect
 )
