1st commit of fusion capable decoder, json support (#163)
fusion decoder implementation. This is suitable for analysis.

Adds fusion parameters to fusion.yaml. And specifies external file
definition of fusion groups using JSON

New statistics for fused instructions and fusion group stats

HCache as separate structure in fusion/fusion

Includes the FSL.md domain language description

Inst.hpp modified to add FUSED and FUSION_GHOST status as extended
status

Support for non-sequential program ID. Each instr has a PID increment
value, and methods

Formatting, clean up of Inst.hpp

JSON support added to Fusion.hpp

New exceptions for JSON errors

Fusion default transform no longer modifies the input buffer

HCache testbench functions

---------

Co-authored-by: Jeff Nye <jeff@www.condorcomputing.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,3 +33,4 @@ add_subdirectory(core/rename)
 add_subdirectory(core/lsu)
 add_subdirectory(core/issue_queue)
 add_subdirectory(core/branch_pred)
+add_subdirectory(fusion)
