--- a/arches/big_core.yaml
+++ b/arches/big_core.yaml
@@ -11,6 +11,7 @@ top.cpu.core0:
   rename.params.num_to_rename: 8
   rename.params.num_integer_renames: 64
   rename.params.num_float_renames: 64
+  rename.params.num_vector_renames: 64
   dispatch.params.num_to_dispatch: 8
   rob.params.num_to_retire:    8
   dcache.params:
@@ -32,7 +33,8 @@ top.cpu.core0.extension.core_extensions:
     ["float", "faddsub", "fmac"], # exe6
     ["float", "f2i"], # exe7
     ["br"], # exe8
-    ["br"] # exe9
+    ["br"], # exe9
+    ["vint", "vset"]
   ]
   # this is used to set how many units per queue
   # ["0", "3"] means iq0 has exe0, exe1, exe2, and exe3, so it's inclusive
@@ -47,25 +49,37 @@ top.cpu.core0.extension.core_extensions:
     ["2", "3"], # iq1 -> exe2, exe3
     ["4", "5"], # iq2 -> exe4, exe5
     ["6", "7"], # iq3 -> exe6, exe7
-    ["8", "9"]  # iq4 -> exe8, exe9
+    ["8", "9"],  # iq4 -> exe8, exe9
+    ["10"] # iq5 -> exe10
   ]
 top.cpu.core0.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
-      ["lsu",    1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
-      ["lsu",    1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
+  vector.params.latency_matrix: |
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
