--- a/arches/small_core.yaml
+++ b/arches/small_core.yaml
@@ -18,7 +18,7 @@ top.cpu.core0.extension.core_extensions:
   # targets of: "int" and "div"
   pipelines:
   [
-      ["int", "mul", "i2f", "cmov", "div"], # exe0
+      ["sys", "int", "mul", "i2f", "cmov", "div"], # exe0
       ["float", "faddsub", "fmac", "f2i"], # exe1
       ["br"] # exe2
   ]
