--- a/test/core/rename/test_cores/test_big_core_full.yaml
+++ b/test/core/rename/test_cores/test_big_core_full.yaml
@@ -13,7 +13,8 @@ top.cpu.core0.extension.core_extensions:
     ["float", "faddsub", "fmac"], 
     ["float", "f2i"],
     ["br"],
-    ["br"]
+    ["br"],
+    ["vint", "vset", "vdiv", "vmul"]
   ]
   issue_queue_to_pipe_map:
   [ 
@@ -21,25 +22,37 @@ top.cpu.core0.extension.core_extensions:
     ["2", "3"],
     ["4", "5"],
     ["6", "7"],
-    ["8", "9"]
+    ["8", "9"],
+    ["10"]
   ]
 top.cpu.core0.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
-      ["lsu",    1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
-      ["lsu",    1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
+  vector.params.latency_matrix: |
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
