--- a/arches/big_core.yaml
+++ b/arches/big_core.yaml
@@ -7,7 +7,7 @@ include: medium_core.yaml
 
 top.cpu.core0:
   fetch.params.num_to_fetch:   8
-  decode.params.num_to_decode: 3
+  decode.params.num_to_decode: 8
   rename.params.num_to_rename: 8
   rename.params.num_integer_renames: 64
   rename.params.num_float_renames: 64
@@ -34,7 +34,7 @@ top.cpu.core0.extension.core_extensions:
     ["float", "f2i"], # exe7
     ["br"], # exe8
     ["br"], # exe9
-    ["vint", "vset"]
+    ["vint", "vset", "vdiv", "vmul"]
   ]
   # this is used to set how many units per queue
   # ["0", "3"] means iq0 has exe0, exe1, exe2, and exe3, so it's inclusive
