--- a/test/core/lsu/test_cores/test_big_core.yaml
+++ b/test/core/lsu/test_cores/test_big_core.yaml
@@ -1,10 +1,6 @@
-
 #
-# Set up the pipeline for a 2-wide machine
+# Set up the pipeline for a 8-wide machine
 #
-#top.cpu:
-#  dispatch.num_to_dispatch: 2
-
 top.extension.core_extensions:
   pipelines:
   [
@@ -17,7 +13,8 @@ top.extension.core_extensions:
     ["float", "faddsub", "fmac"], 
     ["float", "f2i"],
     ["br"],
-    ["br"]
+    ["br"],
+    ["vint", "vset", "vdiv", "vmul"]
   ]
   issue_queue_to_pipe_map:
   [ 
@@ -25,25 +22,37 @@ top.extension.core_extensions:
     ["2", "3"],
     ["4", "5"],
     ["6", "7"],
-    ["8", "9"]
+    ["8", "9"],
+    ["10"]
   ]
 top.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
-      ["lsu",    1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
-      ["lsu",    1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
+  vector.params.latency_matrix: |
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
