--- a/test/core/lsu/test_cores/test_big_core_small_rename.yaml
+++ b/test/core/lsu/test_cores/test_big_core_small_rename.yaml
@@ -4,10 +4,13 @@
 #
 #top.cpu:
 #  dispatch.num_to_dispatch: 2
-  top:
+top:
     rename.params.num_integer_renames: 34
     rename.params.num_float_renames: 34
 
+#
+# Set up the pipeline for a 8-wide machine
+#
 top.extension.core_extensions:
   pipelines:
   [
@@ -20,7 +23,8 @@ top.extension.core_extensions:
     ["float", "faddsub", "fmac"], 
     ["float", "f2i"],
     ["br"],
-    ["br"]
+    ["br"],
+    ["vint", "vset", "vdiv", "vmul"]
   ]
   issue_queue_to_pipe_map:
   [ 
@@ -28,25 +32,37 @@ top.extension.core_extensions:
     ["2", "3"],
     ["4", "5"],
     ["6", "7"],
-    ["8", "9"]
+    ["8", "9"],
+    ["10"]
   ]
 top.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
-      ["lsu",    1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
-      ["lsu",    1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
+  vector.params.latency_matrix: |
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
