--- a/test/core/rename/test_cores/test_medium_core_full.yaml
+++ b/test/core/rename/test_cores/test_medium_core_full.yaml
@@ -21,14 +21,16 @@ top.cpu.core0.extension.core_extensions:
       ["int"],
       ["float", "faddsub", "fmac"], 
       ["float", "f2i"],
-      ["br"]
+      ["br"],
+      ["vint", "vset", "vdiv", "vmul"]
     ]
   issue_queue_to_pipe_map:
   [ 
     ["0"],
     ["1", "2"],
     ["3", "4"],
-    ["5"]
+    ["5"],
+    ["6"]
   ]
 
 top.cpu.core0.rename.scoreboards:
@@ -36,16 +38,26 @@ top.cpu.core0.rename.scoreboards:
   # |
   # V
   integer.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3"],
-      ["lsu",    1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1]]
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
+      ["lsu",    1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3"],
-      ["lsu",    1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1]]
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
+      ["lsu",    1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1]]
+  vector.params.latency_matrix: |
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
+      ["lsu",    1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1]]
