--- a/test/core/rename/test_cores/test_small_core.yaml
+++ b/test/core/rename/test_cores/test_small_core.yaml
@@ -7,13 +7,15 @@ top.extension.core_extensions:
     [
       ["int", "mul", "i2f", "cmov", "div"],
       ["float", "faddsub", "fmac", "f2i"], 
-      ["br"]
+      ["br"],
+      ["vint", "vset", "vdiv", "vmul"]
     ]
   issue_queue_to_pipe_map:
   [ 
     ["0"],
     ["1"],
-    ["2"]
+    ["2"],
+    ["3"]
   ]
 
 top.rename.scoreboards:
@@ -21,14 +23,23 @@ top.rename.scoreboards:
   # |
   # V
   integer.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2"],
-      ["lsu",    1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1]]
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3"],
+      ["lsu",    1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2"],
-      ["lsu",    1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1]]
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3"],
+      ["lsu",    1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1]]
+  vector.params.latency_matrix: |
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3"],
+      ["lsu",    1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1]]
