--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -13,8 +13,8 @@ jobs:
       # Strategy is a matrix of debug and release builds/regression
       matrix:
         os: [macos-12]
-        BUILD_TYPE: [Debug,Release]
-        COMPILER: [gcc,clang]
+        BUILD_TYPE: [Debug]
+        COMPILER: [clang]
 
     name: MacOS-${{ matrix.BUILD_TYPE }}-${{matrix.COMPILER}}
     runs-on: ${{ matrix.os }}
