--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
           # $CONDA is an environment variable pointing to the root of the miniconda directory
           $CONDA/bin/conda config --set channel_priority strict
-          $CONDA/bin/conda env update --file  ${{ github.workspace }}/conda/environment.yml
+          $CONDA/bin/conda env update --file  ${{ github.workspace }}/.github/workflows/conda/macos_env.yml
           $CONDA/bin/conda init bash
 
       # Build
