--- a/.github/workflows/conda/macos_env.yml
+++ b/.github/workflows/conda/macos_env.yml
@@ -6,8 +6,8 @@ dependencies:
   - cmake=3.15
   - hdf5=1.10
   - sqlite=3.36
-  - boost=1.76.*
-  - boost-cpp=1.76.*
+  - boost=1.76
+  - boost-cpp=1.76
   - xz
   - yaml-cpp=0.7
   - rapidjson=1.1
