Attempt to fix Boost fail

--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -68,6 +68,7 @@ jobs:
           $CONDA/bin/conda config --set channel_priority strict
           $CONDA/bin/conda env update --file  ${{ github.workspace }}/.github/workflows/conda/macos_env.yml
           $CONDA/bin/conda init bash
+          brew link --force boost@1.76
 
       # Build
       - name: Build & Regress
