Initial version of prefetcher API
This API proposes to seperate the prefetcher interface (defined in PrefetcherIF.hpp) with
actual implementation of prefetch engine (defined in PrefetchEngineIF.hpp). This approach
allows the model to rapidly customize the prefetchers with multiple prefetch policies
e.g. We can create stride prefetch engine and use the same engine in L2 Prefetcher as well
as L3 prefetcher.

Prefetchers that depend on external (to prefetcher) state can optionally create an Update Object
deriving it from PrefetcherStateUpdateType and pass the updates to the prefetcher.

NextLinePrefetchEngine is an example implementation of PrefetchEngineIF
DataPrefetcher is an example implementation of a simple prefetcher utilizing the above engine

The files have been compile tested.
Unit testing, LSU integraion is TBD and will be done after review and possible changes.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -24,6 +24,8 @@ add_library(core
   CPU.cpp
   CPUFactory.cpp
   CPUTopology.cpp
+  NextLinePrefetchEngine.cpp
+  DataPrefetcher.cpp
 )
 get_property(SPARTA_INCLUDE_PROP TARGET SPARTA::sparta PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
 target_include_directories(core SYSTEM PRIVATE ${SPARTA_INCLUDE_PROP})
