add the interim gem5 conversion with ctest
GEM5 TAGE and SimpleBTB were converted to Sparta units,
w/ Map style parameters and stats.

this is a draft, next to zero cycles have been run on the
conversion.

next steps might be to integrate with the existing BP API
and create some external training data.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,4 +33,5 @@ add_subdirectory(core/rename)
 add_subdirectory(core/lsu)
 add_subdirectory(core/issue_queue)
 add_subdirectory(core/branch_pred)
+add_subdirectory(core/bpu)
 add_subdirectory(fusion)
