add fsl repo as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "stf_lib"]
 	path = stf_lib
 	url = https://github.com/sparcians/stf_lib.git
+[submodule "fsl"]
+	path = fsl
+	url = git@github.com:Condor-Performance-Modeling/fsl.git
