Fixing tail agnostic implementation and VL settings

--- a/test/core/vector/CMakeLists.txt
+++ b/test/core/vector/CMakeLists.txt
@@ -14,6 +14,7 @@ file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/vsetvli_vadd_sew_32.json   ${CMAKE_
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/vsetvli_vl_max_setting.json  ${CMAKE_CURRENT_BINARY_DIR}/vsetvli_vl_max_setting.json SYMBOLIC)
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/multiple_vset.json  ${CMAKE_CURRENT_BINARY_DIR}/multiple_vset.json SYMBOLIC)
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/vmul_transfer.json  ${CMAKE_CURRENT_BINARY_DIR}/vmul_transfer.json SYMBOLIC)
+file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/undisturbed_checking.json  ${CMAKE_CURRENT_BINARY_DIR}/undisturbed_checking.json SYMBOLIC)
 
 
 
@@ -21,3 +22,4 @@ sparta_named_test(Vector_test_vsetivli_lmul_4  Vector_test big_core.out -c test_
 sparta_named_test(Vector_test_vsetvl_vadd  Vector_test big_core.out -c test_cores/test_big_core_full.yaml --input-file vsetvl_vadd.json)
 sparta_named_test(Vector_test_vsetvli_vadd_sew_32  Vector_test big_core.out -c test_cores/test_big_core_full.yaml --input-file vsetvli_vadd_sew_32.json)
 sparta_named_test(Vector_test_vsetvli_vl_max_setting  Vector_test big_core.out -c test_cores/test_big_core_full.yaml --input-file vsetvli_vl_max_setting.json)
+sparta_named_test(Vector_undisturbed_test  Vector_test big_core.out -c test_cores/test_big_core_full_8_decode.yaml --input-file undisturbed_checking.json)
